problema con el correo

--- a/homework/notebook.ipynb
+++ b/homework/notebook.ipynb
@@ -18,6 +18,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "40c5c64b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "id": "d2061e1f",
    "metadata": {},
@@ -2523,6 +2531,16 @@
     "\n",
     "with open(\"vectorizer.pkl\", \"wb\") as file:\n",
     "    pickle.dump(vectorizer, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7400e691",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#problema"
    ]
   },
   {
